# PDF-Merge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ppa.yaml  release.yaml
src/: main.rs
