[package]
name = "pdfmerge"
version = "1.0.1"
license = "MIT"
edition = "2024"
authors = ["Anirudh Singh <anirudh.sai8296@gmail.com>"]
description = "An interactive CLI tool to merge multiple PDFs using Ghostscript"

[dependencies]
dialoguer = "0.11"
inquire = "0.9.4"
shellexpand = "3.0"

[package.metadata.deb]
maintainer = "Anirudh Singh <anirudh.sai8296@gmail.com"
copyright = "2026, Anirudh Singh <anirudh.sai8296@gmail.com"
license-file = ["LICENSE", "0"]
depends = "ghostscript"
section = "utils"
priority = "optional"
assets = [
  ["target/release/pdfmerge", "usr/bin/pdfmerge", "755"],
]
